2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/base/tile.[ch]
	* app/paint-funcs/paint-funcs.c: moved code to update tile row
	hints to tile.[ch].

2007-10-09  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimphelpui.c (gimp_help_connect): pass canonical
	signal names to gtk_binding_entry_add_signal().

2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/actions/window-commands.c: specify alternative button order.

2007-10-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c: removed an obsolete comment.

2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactionview.c
	* app/widgets/gimphelp.c: specify alternative button order for
	message dialogs.

	* app/dialogs/user-install-dialog.c: removed trailing whitespace.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.c: implement button_release
	and stop the draw tool when in adjust mode. Fixes bug #483912.

	(gimp_perspective_clone_tool_mode_notify): start the draw tool.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.c: cosmetics.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrendererimage.c
	(gimp_view_renderer_image_render): as some kind of workaround for
	bug #459518, show the fallback icon when rendering the preview for
	an invisible channel.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.[ch]: removed level from
	GimpDisplayShell struct.

	* app/display/gimpdisplayshell-render.c: fixed rendering of the mask.
	Closes bug #448417 again.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolorpanel.[ch]: reverted the live update change
	from bug #451568. It causes breakage such as bug #484757.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/config/gimpdisplayconfig.[ch]
	* app/config/gimprc-blurbs.h
	* app/display/display-enums.[ch]
	* app/display/gimpdisplayshell-handlers.c
	* app/display/gimpdisplayshell-render.c: allow to configure the